| Summary: | ASTERISK-26085: app_mp3: results in timeout for streams | ||
| Reporter: | Jens Bürger (wiremuddle) | Labels: | |
| Date Opened: | 2016-06-05 04:36:36 | Date Closed: | 2016-10-17 15:46:32 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_mp3 |
| Versions: | 11.21.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian Linux 7 | Attachments: | |
| Description: | When trying to use MP3Player for playing streams, it constantly results in this error message:
app_mp3.c:133 timed_read: Poll timed out/errored out with 0 I tried with ~10 mp3-Streams. This error has been tackled already some years ago in this issue: ASTERISK-2384 According to the source, mpg123 is called with "-b 1024". Removing this option solves the issue, audio is played instantly. So I guess there might be an imbalance between the buffer, stream data rate and the timeout. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-06-05 04:36:37.129-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Michael Kuron (mkuron) 2016-08-27 04:25:02.263-0500 I have also had this problem for years and never submitted my patch for it. I have uploaded it now: https://gerrit.asterisk.org/3738 . I decided to keep the buffering, but make the buffer size really small so that it takes milliseconds to fill up instead of dozens of seconds. By: Michael Kuron (mkuron) 2016-10-17 15:42:33.058-0500 This issue should be closed. The fix has been merged a few weeks ago. | ||